# quisy-tts

./: .coverage  .dod.md  .env  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .team.md  404.html  AGENTS.md  CHANGELOG.md  DOCKERHUB.md  DOCKERHUB_README.md  Dockerfile  README.md  README_DOCKERHUB.md  __init__.py  check_db.py  check_db_direct.py  check_diffusers.py  check_target.py  concatenate_audio.py  docker-compose.yml  hooks_list.txt  index.html  list_voices_debug.py  matches.txt  mkdocs.yml  openapi.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  read_log.py  renovate.json  sitemap.xml  start_backend.ps1  start_frontend.ps1  test_client.py  (+7 more)
.github/workflows/: docker-publish.yml  docs.yml  pipeline.yml  release.yml  renovate.yml
app/: quisy-tts.db
arc42/01_introduction/: index.html
arc42/02_architecture_constraints/: index.html
arc42/03_system_scope_and_context/: index.html
arc42/04_solution_strategy/: index.html
arc42/05_building_block_view/: index.html
arc42/06_runtime_view/: index.html
arc42/07_deployment_view/: index.html
arc42/08_concepts/: index.html
arc42/09_design_decisions/: index.html
arc42/10_quality_requirements/: index.html
arc42/11_risks_and_technical_debt/: index.html
arc42/12_glossary/: index.html
arc42/SUMMARY/: index.html
docs/: index.md
docs/arc42/: 01_introduction.md  02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_design_decisions.md  10_quality_requirements.md  11_risks_and_technical_debt.md  12_glossary.md  SUMMARY.md
frontend/: .stylelintrc.json  README.md  angular.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  proxy.local.json  proxy.local.temp.json  tsconfig.json
frontend/reports/axe/: home.json  synthesis.json  voices.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: _mixins.scss  _shared.scss  _variables.scss  app.config.ts  app.routes.ts  app.ts
frontend/src/styles/: _animations.scss  _primeng-overrides.scss  _utilities.scss
frontend/tests/: axe.spec.ts  screenshot.spec.ts  synthesis.spec.ts  voices.spec.ts
resources/: quisy-tts.db  quisy-tts.db-shm  quisy-tts.db-wal  quisy-tts.db.bak
scripts/: benchmark_real_qwen.py  check_db.py  check_missing_files.py  check_missing_files_v2.py  check_qwen_device.py  check_versions.py  cleanup_cache.py  cleanup_corrupted_audio.py  debug_voice.py  demo_generate.py  download_models.py  export_openapi.py  inspect_qwen.py  test_api_generate.py  test_api_status.py  test_api_stream.py  test_api_ws.py  verify_audio_files.py
search/: search_index.json
src/: config.py  main.py  mcp_server.py  qwen_tts.py  uvcli.py
src/api/: __init__.py  app.py  dependencies.py  websocket_status_manager.py
src/api/routes/: __init__.py  audio_processing.py  base.py  custom_voice.py  generate.py  info.py  ssml.py  voice_design.py  voices_crud.py  voices_search.py  websocket.py
src/audio/: processor.py
src/core/: __init__.py  interfaces.py
src/domain/voice/: models.py
src/engine/: __init__.py  backend_interface.py  qwen.py
src/infrastructure/: audio_converter.py  cache_service.py  cleanup_service.py
src/models/: manager.py
src/project/: config.py  main.py  qwen_tts_engine.py  schemas.py  test_qwen_tts.py
src/project/api/: __init__.py  app.py  dependencies.py
src/project/audio/: processor.py
src/project/core/: __init__.py  exceptions.py
src/project/engine/: __init__.py  backend_interface.py  qwen.py
src/project/models/: manager.py
src/project/schemas/: __init__.py  internal.py  requests.py
src/project/services/: __init__.py  cache_service.py  cleanup_service.py  tts_service.py
src/project/text/: optimizer.py
src/quisy_tts/: client.py  config.py  mcp_bridge.py
src/quisy_tts/audio/: processor.py
src/quisy_tts/core/: __init__.py  interfaces.py
src/quisy_tts/engine/: __init__.py  qwen.py
src/quisy_tts/schemas/: __init__.py  internal.py  languages.py
src/quisy_tts/services/: __init__.py  cache_service.py  cleanup_service.py  ssml_processor.py  text_splitter.py  tts_service.py  voice_audio_integrity.py  voice_service.py
src/repositories/: voice_repository.py
src/schemas/: __init__.py  internal.py  languages.py  requests.py  voice.py
src/services/: __init__.py  cache_service.py  cleanup_service.py  default_voices.py  sound_effect_service.py  ssml_processor.py  text_splitter.py  tts_service.py  voice_audio_integrity.py  voice_audio_service.py  voice_search_service.py  voice_service.py
src/services/orchestrator/: generator.py  reference.py  reference_resolver.py  ssml.py  streamer.py
src/services/tts/: generator.py  reference.py  ssml.py  streamer.py
tests/: conftest.py  test_api.py  test_architecture.py  test_benchmarks.py  test_caching.py  test_concurrency.py  test_device.py  test_ensure_audio.py  test_live.py  test_mcp_server.py  test_reserved_keywords.py  test_routes_order.py  test_sox_requirement.py  test_ssml_processor.py  test_text_splitter.py  test_text_splitting_integrity.py  test_tts_cancellation.py  test_voice_id_validation.py  test_voice_seeding.py  test_voice_set_audio.py  test_voices_search.py  test_voices_system_prompt.py  verify_modes.py
tests/api/: test_generate_route.py  test_voices_crud.py
tests/core/: test_architecture.py
tests/domain/: test_voice_models.py
tests/infrastructure/: test_db_consistency.py
tests/integration/: test_api_upload.py
tests/repositories/: test_voice_repository.py
tests/resources/: example_text_splitting.txt  full_ssml_test.xml  test_ssml.xml  voice_design_payload.json
tests/schemas/: test_internal.py  test_languages.py  test_tts_params.py
tests/services/: test_cache_service.py  test_caching.py  test_cleanup_service.py  test_default_voices.py  test_reference_resolver.py  test_ssml_processor.py  test_ssml_service.py  test_text_splitting_integrity.py  test_tts_service.py  test_voice_search_service.py  test_voice_service.py
voices/: voices.db
(+39 files in other folders)
