[project]
name = "domoskanonos-python-starter"
version = "0.3.0"
description = "python project starter template"
authors = [{ name = "Dominik Bruhn", email = "dominikbruhn@googlemail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pydantic-settings>=2.12.0",
    "sox>=1.0.5",
    "qwen-tts>=0.0.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "websockets>=13.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
gpu-linux = ["flash-attn>=2.0.0", "vllm>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pip>=23.0.1",
    "pyinstaller>=6.0.0",
    "pre-commit>=3.5.0",
    "mypy>=1.19.1",
    "python-semantic-release>=10.5.3",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "types-requests>=2.31.0",
]


[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = false
ignore_missing_imports = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branches.main = { match = "main" }
build_command = "python -m pip install uv && uv build"
upload_to_pypi = false

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

# Flash Attention requires torch to be present during build
[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
