[project]
name = "quisy-tts"
version = "0.23.1"
description = "Quisy TTS is a modern, high-performance Text-to-Speech API powered by Qwen3-TTS."
authors = [{ name = "Dominik Bruhn", email = "dominikbruhn@googlemail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pydantic-settings>=2.12.0",
    "sox>=1.0.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "qwen-tts>=0.1.1",
    "websockets>=13.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "spacy>=3.7.0",
    "diffusers>=0.25.0",
    "fastmcp>=2.1.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pip>=23.0.1",
    "pyinstaller>=6.0.0",
    "python-semantic-release>=10.5.3",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "types-requests>=2.31.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
]



[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branches.main = { match = "main" }
build_command = "python -m pip install uv && uv build"
upload_to_pypi = false

[tool.uv]
override-dependencies = ["numba>=0.59.0", "llvmlite>=0.42.0", "librosa>=0.10.0"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[project.scripts]
start-dev = "src.uvcli:run"
